data/derived/sp14/progs/unify/prog0288.ml.out
Characters 68-80:
  | h::t -> rev (h::x) t in
            ^^^^^^^^^^^^
Error: This expression has type 'a list -> 'a list
       but an expression was expected of type 'a list
